# licensekit

./: .gitignore  MULTI_PRODUCT_GUIDE.md  README.md  pyproject.toml  test.py  test2.py
.github/workflows/: publish.yml
src/licensekit/: __init__.py  cli_issue_license.py  cli_make_keys.py  cli_make_pyarmor_key.py  cli_show_public_key_fingerprint.py  context.py  crypto.py  io.py  policy.py  runtime.py  testing_utils.py  token.py
